[package]
name = "real-time-server"
version = "0.1.0"
authors = ["Daniel Zou <zoudl2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version = "0.3"}
log = "0.4"
snafu = "0.6"
rand = "0.8"
serde = "1.0"
tokio = {version = "1.0", features = ["full"]}
tokio-tungstenite = "0.13"
